# CapsWriter-Offline-Linux-Compiled

./: .gitignore  README.md  config_client.py  config_linux.py  config_server.py  hot-server.txt  pyproject.toml  requirements.txt  setup.sh  start_client.sh  start_server.sh  test_mic.py  test_mic.sh
1970/01/: 01.md
2026/07/: 06.md
LLM/: __init__.py  default.py  翻译.py
assets/: BUILD_GUIDE.md
core/: logger.py  protocol.py
core/client/: __init__.py  app.py
core/client/audio/: __init__.py  file_manager.py  recorder.py  stream.py
core/client/clipboard/: __init__.py
core/client/diary/: __init__.py  diary_writer.py
core/client/global_hotkey/: __init__.py
core/client/hotword/: __init__.py  hotword_generate_nb.py  hotword_standalone.py  rag_accu.py  rag_fast.py  stocks.txt
core/client/llm/: llm_client_pool.py  llm_constants.py  llm_context.py  llm_error_handler.py  llm_exceptions.py  llm_handler.py  llm_interfaces.py  llm_output_toast.py  llm_output_typing.py  llm_role_config.py  llm_role_formatter.py  llm_role_loader.py  llm_watcher.py  llm_write_md.py
core/client/shortcut/: key_mapper.py  shortcut_config.py  shortcut_manager.py  task.py
core/client/transcribe/: __init__.py  (+2 more)
core/server/: __init__.py  app.py  app_linux.py
core/tools/: __init__.py  clean_assets.py  daemon_executor.py  empty_working_set.py  my_status.py  punc_converter.py  signal_handler.py  srt_from_txt.py
core/ui/: __init__.py  context_menu_handler.py  dialogs.py  hotword_dialog.py  hotword_menu_handler.py  toast_logger.py  tray.py
docs/: Ubuntu离线部署教程.md  text_merge_algorithm.md
(+26 files in other folders)
