[project]
name = "capsWriter-offline"
version = "2.6"
description = "CapsWriter Offline — offline speech-to-text tool (Linux edition)"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
    # === Core runtime (client + server) ===
    "numpy>=1.24",
    "websockets>=12.0",
    "rich>=13.0",
    "pyyaml>=6.0",

    # === Server: ASR engines ===
    "onnxruntime>=1.20",
    "sherpa-onnx>=1.10",
    "sentencepiece>=0.2",
    "soundfile>=0.12",
    "srt>=3.5",
    "pypinyin>=0.50",
    "rapidfuzz>=3.0",

    # === Client: audio capture ===
    "sounddevice>=0.4",
    "pynput>=1.7",
    "keyboard>=0.13",

    # === Client: clipboard ===
    "pyclip>=0.7",

    # === Client: file monitoring (hotwords) ===
    "watchdog>=4.0",

    # === Client: terminal output ===
    "colorama>=0.4",

    # === Client: markdown rendering ===
    "markdown-it-py>=3.0",
    "markdown>=3.5",

    # === Client: LLM integration (optional at runtime) ===
    "ollama>=0.4",
    "openai>=1.0",
    "requests>=2.31",

    # === Client: tkinter UI helpers ===
    "Pillow>=10.0",
    "tkhtmlview>=0.3",
]

[project.optional-dependencies]
# Qwen3-ASR engine (needs torch)
qwen = ["torch>=2.0", "transformers>=4.45", "gguf>=0.12"]

# Fun-ASR-Nano engine (needs gguf only, no torch)
funasr = ["gguf>=0.12"]

